# zander

./: .gitignore  README.md  documentation.md  pyproject.toml  rebase.md
calibrate/: __init__.py  __main__.py  aruco_detector.py  aruco_generator.py  camera_calibration.py  camera_params.py
docs/: arc42-template.adoc  camera-and-calibration-notes.md  camera-calibration.md  formula.md
docs/images/: PlantUML Editor Online - Free & Fast UML Diagram Tool _ PlantText.html
docs/src/: 01_introduction_and_goals.adoc  02_architecture_constraints.adoc  03_system_scope_and_context.adoc  04_solution_strategy.adoc  05_building_block_view.adoc  06_runtime_view.adoc  09_architecture_decisions.adoc  10_quality_requirements.adoc  11_technical_risks.adoc  12_glossary.adoc
docs/uml/: business-context.puml  c4_level1.puml  c4_level2.puml  sequenzdiagramm.puml  technical-context.puml
documentation/: uart-protocol.md
notebooks/: 01_Preprocessing.ipynb  02_EdgeDetection.ipynb  03_CentroidDetection.ipynb  03_ObjectDetection.ipynb  04_ShapeAndPieceDetection.ipynb
services/: camera.py
solver/: __main__.py  client_handler.py  constants.py  debugger.py  environment.py  logger.py  main.py  plot.py  plotter.py  puzzle.py  solver.py  uart_handler.py
solver/example/: buffer_example.py
solver/messages/: camera.py  move.py  ready.py  reset.py
solver/models/: cursor.py  edge.py  frame_side.py  piece.py  place_transform.py  placed_piece.py  puzzle_frame.py  solution.py  vector2.py  vector_2.py
solver/pipeline/: contour_detector.py  (+7 more)
visualizer/: icon.svg.import  project.godot
(+65 files in other folders)
