[project]
name = "zander"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "opencv-contrib-python>=4.11.0.86",
    "shapely>=2.1.2",
]

[tool.uv]
# picamera2/libcamera sind auf dem Pi apt-installiert (nicht auf PyPI) → venv braucht Zugriff.
system-site-packages = true
