[project]
name = "zander"
version = "0.1.0"
description = "HSLU PREN Puzzle Solver"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "numpy>=2.3.5",
    "opencv-contrib-python>=4.11.0.86",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pyserial>=3.5",
    "shapely>=2.1.2",
]
